Removed scroll bar on route/index, fix nav bar z-index, redirect from /usr/index/ to /user/detail

--- a/ZendApp/public/css/global.css
+++ b/ZendApp/public/css/global.css
@@ -205,3 +205,7 @@ a.btnLink:hover {
 .font_16 {
     font-size: 16px;
 }
+
+.dropdown-menu {
+    z-index: 1004 !important;
+}
